# FastLog

./: BufferManager.cc  BufferManager.h  CMakeLists.txt  Context.cc  Context.h  DesignNotes.adoc  EventBuffer.h  LocalWrites.cc  LoggerConsts.h  Main.cc  Utils.h  Worker.h  local_writes_benchmarks.cc  localwrites.c  updateRemote
PoC-inline-rt-call/llvm-pass-skeleton/: README.txt  buildExample.sh  buildExampleBitcode.sh  buildExampleLTO.sh  rtlib.c  rtlib.h
design-docs/: TODOs.txt  benchmark-results.txt  log_addr.txt  log_addr2.txt  ngrt-on-cloudlab.adoc  volatile_buf.txt  volatile_buf_opt.txt
scripts/: disassemble.sh  expandMainCpp.sh  runBench.sh  setup-benchmark-env.sh
